# zamowienia_probki_mail

./: .gitignore  README.md  README_CSV.md  README_GEMINI.md  README_LLM.md  pyproject.toml
company_lib/: __init__.py  config.py  logger.py
company_lib/core/: __init__.py  database.py  gemini_client.py  llm_service.py  mailer.py  openai_client.py  qwen_client.py
company_lib/domain/: __init__.py  erp_service.py  interfaces.py  models.py  repositories.py
company_lib/infrastructure/: __init__.py  factories.py  repo_csv.py
data/mocks/: customers.csv  mail_logs.csv  notes.csv  samples.csv  samples_empty.csv  samples_invalid.csv  samples_test.csv  tasks.csv
docs/: CSV_CONVERSION.md  CSV_CONVERSION_FLOW.md  ERROR_HANDLING.md  SAFETY_CHECKLIST.md
inne/: RAG_08.md  RAG_database_06.md  RAG_flow_07.md  RAG_flowchart_02.md  RAG_kontakty.md  RAG_question.csv  RAG_router_03.md  RAG_similarity.md  RAG_struktura_tools_05.md  RAG_topics_question_01.md  add_proces_py_to_win.md  instalacja posgre.md  instalacja_docker.md  mail.md  ollama_verify.md  one_file.py  one_file_01.py  qwen.md  schemat_probki.md  select_vector.py  vectorize_database.md  voice_assistant.md  voice_langchain.py  voice_ollama_bind.py  voice_qwen_message.py  voice_tools01.py
inne/dashboard/: LoadBalancingView.py  WirtualnaTablicaPlanistyczna.py  app_plotly_streamlit.py
scripts/: __init__.py  customer_monitor.py  note_categorizer.py  sample_followup.py  test_csv_conversion.py  test_error_handling.py
templates/email/: notification.html  tasks_notification.html
